# googleapis-gen

./: README.md  buf.gen.yaml  buf.yaml  hello.py  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
scripts/: write_license.py
tests/: test_import.py
