[project]
name = "googleapis-gen"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["protobuf>=5.28.3"]
license = { file = "LICENSE" }

maintainers = [
    { name = "caiyunapp", email = "oss@caiyunapp.com" },
    { name = "ringsaturn", email = "ringsaturn.me@gmail.com" },
]

[project.urls]
"Source Code" = "https://github.com/caiyunapp/googleapis-gen"
Issues = "https://github.com/caiyunapp/googleapis-gen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.ruff]
exclude = ["*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi"]
